feat: lambda to method-ref